# fastapi-template

./: .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: config.py  excepts.py  main.py
src/api/: deps.py  exception_handlers.py  router.py
src/api/endpoints/: health.py  users.py
src/middlewares/: logging.py
src/utils/: log.py
